# flyto-core

./: .coveragerc  .dockerignore  .env.example  .flyto-rules.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  Dockerfile.verification  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-HEADER.txt  MANIFEST.in  NOTICE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  STATE.md  VALIDATION_API_PLAN.md  demo.py  demo.tape  package-lock.json  package.json  pyproject.toml  registry.json  requirements-integrations.txt  requirements.txt  run.bat  run.py  run.sh  run_demo.sh  server.json  (+4 more)
.flyto/: brief.md  descriptions.jsonl  flyto.json
.flyto-index/: OUTLINE.md
.flyto/index/: summary.json
.flyto/nav/: map.json  tree.json
.flyto/tags/: symbol_tags.jsonl
.github/: FUNDING.yml  branding-allowlist.txt  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  module_request.yml
.github/workflows/: ai-ui-review.yml  branding-guard.yml  ci-api-tests.yml  ci.yml  notify-docs.yml  notify-module-sync.yml  publish-pypi.yml  regen-module-snapshot.yml  security-scan.yml  security.yml  sync-i18n.yml  validate-modules.yml
audit_report/: summary.md
audit_report/by_category/: ai.md  analysis.md  api.md  array.md  atomic.md  browser.md  check.md  cloud.md  communication.md  compare.md  convert.md  crypto.md  data.md  database.md  document.md  element.md  encode.md  error.md  file.md  flow.md  format.md  hash.md  image.md  logic.md  math.md  meta.md  notification.md  object.md  path.md  productivity.md  random.md  regex.md  set.md  stats.md  storage.md  string.md  template.md  testing.md  text.md  (+3 more)
demo/: README.md  flyto-core-demo.cast  record-demo.sh
docs/: API.md  CLI.md  CONFIGURATION.md  CORE_MINIMAL_ARCHITECTURE.md  DSL.md  FEATURES.md  ICONS.md  MIGRATION_STATUS.md  MODULE_PHASE2_FEATURES.md  MODULE_QUICK_REFERENCE.md  MODULE_SPECIFICATION.md  MODULE_SYSTEM_OVERHAUL.md  OPERATIONS.md  PLUGIN_SDK.md  README.md  RECIPES.md  REGISTER_MODULE_GUIDE.md  SECURITY_MODEL.md  TESTING.md  TOOL_CATALOG.md  WHITEPAPER.md  WRITING_MODULES.md  YAML_WORKFLOW_SPEC.md  documentation-manifest.json  flyto2-smoke-recipes.md  warroom-deterministic-verification.md
examples/: README.md
handoffs/: 2026-06-21-project-memory-bootstrap.md  2026-06-23-automation-test-model.md  2026-06-23-product-verification-90-gate.md  2026-06-23-public-site-verification.md  2026-06-23-verification-docker-packaging.md  2026-06-23-verification-runner-service.md  2026-06-23-verification-service-image.md  2026-06-23-warroom-deterministic-verification.md  2026-06-23-warroom-hydration-aware-replay.md  2026-07-22-source-backed-documentation.md  _registry.md
i18n/: en.json  ja.json  zh.json
plugin-template/: README.md  pyproject.toml
scripts/: README.md  analyze_module_returns.py  batch_update_connection_rules.py  check_brand_identity.py  check_documentation.py  export_i18n_baseline.py  fix_all_connection_rules.py  fix_credential_keys.py  fix_lint_warnings.py  fix_missing_can_receive_from.py  fix_output_descriptions.py  fix_presets_placeholder.py  fix_remaining_warnings.py  fix_schema.py  fix_schema_quality.py  fix_schema_v2.py  fix_schema_v3.py  fix_schema_v4.py  generate_catalog.py  generate_reference.py  lint_i18n.py  lint_modules.py  lock-deps.sh  mcp_drive_demo.py  mcp_drive_login.py  mcp_find_orgid.py  mcp_grab_ctem_error.py  mcp_grab_ctem_html.py  mcp_shot_url.py  mcp_tour.py  mcp_tour_ctem_uglies.py  mcp_tour_custom_picker.py  mcp_tour_projecttype.py  mcp_tour_workspace.py  migrate_all_i18n.py  migrate_module.py  migrate_output_schema_i18n.py  publish_core.py  scrape_share.py  validate_all_modules.py  (+1 more)
src/: README.md
tests/: README.md  __init__.py  browser_full_test.yaml  browser_full_test_phase2.yaml  browser_full_test_suite.yaml  browser_remaining_4_test.yaml  conftest.py  test_agent_e2e.py  test_agent_loop.py  test_agent_new_features.py  test_agent_refactored.py  test_agent_serialization.py  test_agent_tools.py  test_ai_agent_ecosystem.py  test_array_modules.py  test_browser_console.py  test_browser_cookies.py  test_browser_detect.py  test_browser_dialog.py  test_browser_download.py  test_browser_drag.py  test_browser_evaluate.py  test_browser_frame.py  test_browser_geolocation.py  test_browser_hover.py  test_browser_login.py  test_browser_network.py  test_browser_pdf.py  test_browser_record.py  test_browser_scroll.py  test_browser_select.py  test_browser_storage.py  test_browser_tab.py  test_browser_upload.py  test_chat_models.py  test_documentation_generators.py  test_engine_features.py  test_evolution.py  test_hints.py  test_hybrid_agent.py  (+13 more)
workflows/: README.md  bugfix.md  idea-capture.md  implementation.md  investigation.md  planning.md  refactor.md  scrape_chatgpt_share.yaml  security_audit.yaml  wrap-up.md
(+979 files in other folders)
