[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flyto-core"
version = "2.26.9"
description = "The open-source execution engine for AI agents. 451 modules, MCP-native, triggers, queue, versioning, metering."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Flyto2 Team", email = "team@flyto2.com"}
]
maintainers = [
    {name = "Flyto2 Team", email = "team@flyto2.com"}
]
keywords = [
    "automation",
    "workflow",
    "mcp",
    "mcp-server",
    "ai-agents",
    "ai-agent-framework",
    "open-source-ai",
    "browser-automation",
    "web-scraping",
    "playwright",
    "rpa",
    "atomic-modules",
    "workflow-engine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"

dependencies = [
    "pyyaml>=6.0.3,<7",
    "aiohttp>=3.14.1,<4",
    "beautifulsoup4>=4.15.0,<5",
    "lxml>=6.1.0,<7",
    "pydantic>=2.4.0,<3",
    "python-dotenv>=1.2.2,<2",
    "aiofiles>=23.2.1,<25",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
api = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
]
vector = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
]
image = [
    "qrcode[pil]>=7.0",
    "Pillow>=11.3.0",  # GHSA-3f63 (ACE, 10.2.0) + GHSA-44wm (buffer overflow, 10.3.0) fixed; 11.3.0 is the last line supporting py3.9 (12.2.0 CVEs require py3.10)
]
telegram = [
    "python-telegram-bot>=22.8",
]
cloud = [
    "flyto-core[browser,image]",
]
all = [
    "flyto-core[browser,api,vector,telegram,image]",
]
dev = [
    "pytest>=8.4.2",  # GHSA-6w46 tmpdir (dev/local-only) fully patched in 9.0.3 / py3.10; 8.4.2 is the last line supporting py3.9
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "Pillow>=11.3.0",
    "black>=25.12.0",  # GHSA-fj7x ReDoS fixed in 24.3.0; keep the dev-tool floor current until the Python floor can move.
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.5.0",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://flyto2.com"
Documentation = "https://docs.flyto2.com"
Repository = "https://github.com/flytohub/flyto-core"
Issues = "https://github.com/flytohub/flyto-core/issues"
Changelog = "https://github.com/flytohub/flyto-core/blob/main/CHANGELOG.md"
Security = "https://github.com/flytohub/flyto-core/blob/main/SECURITY.md"
Blog = "https://blog.flyto2.com/posts/ai-workflow-automation-alternatives"
Examples = "https://docs.flyto2.com/guide/first-workflow"
Download = "https://flyto2.com/download.html"

[project.scripts]
flyto = "cli.main:main"
flyto-serve = "core.api:main"
flyto-verification = "core.verification_service:main"

# Entry points for plugin discovery
# Other packages can register modules by adding:
# [project.entry-points."flyto.modules"]
# my_modules = "my_package.modules:register_all"
[project.entry-points."flyto.modules"]
community = "core.modules.atomic:register_all"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=core --cov-report=term-missing --cov-fail-under=60"
markers = [
    "browser: real browser tests that require Playwright browser support",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Too strict for now
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
ignore_missing_imports = true

# Per-module overrides for strict checking on quality subsystem
[[tool.mypy.overrides]]
module = "core.modules.quality.*"
disallow_untyped_defs = true
strict = true
